# tidbit

./: .gitignore  CHANGELOG.md  README.en.md  README.md  eslint.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.base.json  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml  ci.yml  release.yml
e2e/: journeys.spec.ts
resources/locales/: README.md
scripts/: generate_icons.py  verify_voice_memo.py
src/: App.tsx  index.html  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/benches/: repo.rs
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_init.sql  0002_note_fts.sql  0003_fts_triggers.sql  0004_note_color.sql  0005_note_content_hidden.sql  0006_group_background_color.sql  0007_note_sort_order.sql
src-tauri/src/: autostart.rs  data_directory.rs  error.rs  hotkey.rs  lib.rs  main.rs  state.rs  tray.rs  window_state.rs
src-tauri/src/backup/: mod.rs  scheduler.rs  snapshot.rs
src-tauri/src/domain/: group.rs  mod.rs  note.rs  revision.rs
src-tauri/src/infra/: db.rs  migrations.rs
src-tauri/src/ipc/: backup.rs  groups.rs  mod.rs  notes.rs  search.rs  settings.rs  wander.rs  window.rs
src-tauri/src/repo/: group_repo.rs  mod.rs  note_repo.rs  revision_repo.rs
src-tauri/src/security/: cipher.rs  kdf.rs
src-tauri/src/window/: edge_dock.rs  hide.rs  mod.rs
src-tauri/tests/: backup_roundtrip.rs  backup_scheduler.rs  cipher.rs  data_directory.rs  db.rs  domain.rs  edge_dock.rs  group_repo.rs  hide.rs  hotkey.rs  kdf.rs  note_repo.rs  tray.rs  wander.rs
src-tauri/tests/common/: mod.rs
src/app/: CommandPalette.tsx  EdgePresence.tsx  Titlebar.tsx  (+3 more)
(+92 files in other folders)
