[package]
name = "tidbit"
version = "0.1.0"
edition = "2021"

[lib]
name = "tidbit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "test"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

rusqlite = { version = "0.31", features = ["bundled-sqlcipher-vendored-openssl"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
argon2 = "0.5"
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }
pbkdf2 = "0.13.0"
sha2 = "0.11.0"
hex = "0.4.3"
rand = "0.10.2"

[dev-dependencies]
tempfile = "3"
